@@ -1,3 +1,9 @@
+2014-12-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-art.el (gnus-article-mime-handles): Refactored out into own
+	function for reuse.
+	(gnus-mime-buttonize-attachments-in-header): Adjusted.
+
 2014-12-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* message.el (message-change-subject): Really check whether the subject
